# rocforge-clamp

./: .ci_mode  .gitattributes  .ninja_deps  .ninja_log  CHANGELOG.md  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  README.md  build.ninja  clamp_aggregator_extended_test  clamp_aggregator_test  clamp_compare_test  clamp_inspect_test  clamp_scoring_test  clamp_test  cmake_install.cmake  pyproject.toml  telemetry_inspect  telemetry_summary.json
.github/workflows/: build.yml  clamp-ci.ymal  clamp-ci.yml  update-rocm.yml  validate.yml
Testing/Temporary/: CTestCostData.txt
build-ci/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  build.ninja  clamp_aggregator_test  clamp_test  cmake_install.cmake  telemetry_summary.json
build-ci/Testing/Temporary/: CTestCostData.txt
build-ci/telemetry/: sample_a.json
ci/: resolve_rocm.py  rocm_matrix.yml  rocm_matrix_fallback.yml  rocm_policy.yml  update_rocm_matrix.py  verify_rocm_digest.py
ci/rocforge_ci/: __init__.py  __main__.py  clamp_bridge.py  diagnostics.py  matrix.py  resolve.py  runlog.py  update.py  verify.py
ci/tests/: test_ci_mode.py  test_resolve.py
cli/: __init__.py  context.py  rocfoundry.py
cli/commands/: __init__.py  clamp.py
docs/: Clamp_Integrity_v4_Spec.md  Phase4_Completion_Checklist.md  Phase4_Implementation_Plan.md  ci_integrity_spec.md  provenance_overview.md  runtime_isolation.md  technical_overview.md  telemetry_compare.md  telemetry_diagnostics.md  telemetry_spec.md
engine/: __init__.py  bootstrap.py
extensions/: __init__.py
extensions/anvil/: __init__.py
extensions/clamp/: __init__.py
extensions/crucible/: __init__.py
extensions/diagnostics/: __init__.py
extensions/rocsync/: __init__.py
extensions/sysmon_snapi/: __init__.py  rocm_verifier.py
extensions/telemetry/: __init__.py
include/: clamp.h
include/clamp/: EntropyTelemetry.h  TelemetryComparator.h  TemporalAggregator.h  TemporalScoring.h
manifest/: clamp.manifest.json
rocforge_ci/: __init__.py  __main__.py
scripts/: ci_offline_bootstrap.sh
snapi/: __init__.py  dispatch.py  errors.py  metadata.py
src/: clamp.cpp
src/scoring/: TemporalScoring.cpp
src/telemetry/: entropy_telemetry.cpp  entropy_validation.cpp  entropy_validation.hip  telemetry_compare.cpp  temporal_aggregator.cpp
src/tools/: telemetry_inspect.cpp
tests/: test_aggregator.cpp  test_aggregator_extended.cpp  test_clamp.cpp  test_compare.cpp  test_inspect.cpp  test_phase4_end2end.py  test_scoring.cpp
tests/clamp/: test_clamp_extension.py  test_rocm_verifier.py
tests/cli/: test_clamp_cli.py
tests/snapi/: test_sysmon_snapi.py
